src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <globalPicklist>Approval_Picklist</globalPicklist>
        <label>Approval Stage</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Author</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testformulafield__c</fullName>
        <formula>Price__c != 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testformulafield</label>
        <type>Checkbox</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TestQueue_Book</fullName>
        <filterScope>Queue</filterScope>
        <label>TestQueue</label>
        <queue>TestQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>